api documentation added for some apis
